[Enh] new dashboard layout. Common statistics query
